--- a/report/EEC277_FinalProject.tex
+++ b/report/EEC277_FinalProject.tex
@@ -20,7 +20,7 @@
 \medskip
 
 \begin{abstract}
-In this paper, we implemented the beginnings of the Viola-Jones object detection method as it applies to faces. We also added a single feature classifier to detect the presence of glasses. To implement this on the GPU, we first find the integral image which is done serially because it is faster. Then, we cascade our identifiers and apply them using the integral image to minimize memory accesses. Finally, if any sub-windows pass all classifiers, it is concluded that the image contains a face. This simple implementation provides 97.3\% accuracy at detecting faces, 96\% accuracy at detecting glasses, a false positive rate of 76\% and runs at a rate of 46 images scanned per second.
+In this paper, we implemented the beginnings of the Viola-Jones object detection method as it applies to faces. We also added a single feature classifier to detect the presence of glasses. To implement this on the GPU, we first find the integral image which is done serially because it is faster. Then, we cascade our identifiers and apply them using the integral image to minimize memory accesses. Finally, if any sub-windows pass all classifiers, it is concluded that the image contains a face. This simple implementation provides 97.3\% accuracy at detecting faces, 96\% accuracy at detecting glasses, a false positive rate of 76\% and runs at a rate of 46 images scanned per second. We also evaluated a non-cascaded Viola-Jones implementation and found it to be slower. At the end, we discuss how the Viola-Jones algorithm can be manipulated to scale more efficiently to the GPU.
  
 \end{abstract}
 
@@ -42,7 +42,7 @@ The parallel implementation first performs a scan operation on the columns to cr
 
 % Cascade of Classifiers -----------------------------------------------------------------
 \subsection{Cascade of Classifiers}
-The classifiers are simple rectangular identifiers to determine different features of the face. To compute whether the classifier accepts that the given sub-window has a face, the algorithm subtracts the "black" area from the "white" area of the classifier. Figure 1 shows the classifiers we used for face detection. In the Viola-Jones paper, they use two hundred of these kinds of classifiers but we use a small subset of four classifiers because we are interested in how this algorithm applies to the GPU instead of the actual results. Four was sufficient to see the difficulties with implementing this algorithm on the GPU.
+The classifiers are simple rectangular identifiers to determine different features of the face. To compute whether the classifier accepts that the given sub-window has a face, the algorithm subtracts the "black" area from the "white" area of the classifier. Figure 1 shows the classifiers we used for face detection. In the Viola-Jones paper, they use two hundred of these kinds of classifiers but we use a small subset of four classifiers because we are interested in how this algorithm applies to the GPU instead of the actual results. Four was sufficient to see the difficulties with implementing this algorithm on the GPU. In training, we found that one of our classifiers continually gave negative values so we ended up using three classifiers.
 
 The other portion of Viola-Jones face detection was the use of a classifier \emph{cascade}. This means that the output of one classifier (which contains the list of sub-windows that may have a face) is the input for the next classifier. So if any classifier rejects a sub-window, the algorithm rejects the sub-window. If all of the classifiers accept a sub-window, then the algorithm says that there is a face at that sub-window. The alternative to the cascade approach is to apply all of the classifiers to every sub-window and define some number of acceptances that each sub-window needs to determine that there is a face there. We implemented both of these approaches to analyze which would be more efficient on the GPU.
 \begin{figure}[h!]
@@ -64,7 +64,7 @@ To extend the Viola-Jones face detection algorithm, we added a glasses classifie
 
 % Results -----------------------------------------------------------------
 \section{Results}
-We ran the cascaded algorithm with three different datasets: faces, non-faces, and faces with glasses. The cascaded algorithm running on the faces dataset with 50 pictures produced a result of 49 faces detected and zero glasses detected. The same algorithm running with the non-face dataset with 50 pictures resulted in 38 faces detected and 8 glasses detected. The face detector ran on the glasses dataset with 25 pictures and found 24 face, 20 of which had glasses. Overall, the face detector has weak results with an accuracy of 97.3\% but a false positive rate of 76\%. The glasses classifier did well with an accuracy of 83.3\% and a false positive rate of 21.1\%. The entire cascaded face detection algorithm ran in 0.020334 seconds. The non-cascaded algorithm ran 65\% slower at 0.033715 seconds. The glasses classifier ran in 0.004104 seconds. These timings are not absolute because it depends on the image and how the cascade can eliminate sub-windows early (reducing work for later stages).
+We ran the cascaded algorithm with three different datasets: faces, non-faces, and faces with glasses. The cascaded algorithm running on the faces dataset with 50 pictures produced a result of 49 faces detected and zero glasses detected. The same algorithm running with the non-face dataset with 50 pictures resulted in 38 faces detected and 8 glasses detected. The face detector ran on the glasses dataset with 25 pictures and found 24 face, 20 of which had glasses. Overall, the face detector has weak results with an accuracy of 97.3\% but a false positive rate of 76\%. The glasses classifier did well with an accuracy of 83.3\% and a false positive rate of 21.1\%. The entire cascaded face detection algorithm ran in 0.020334 seconds. The non-cascaded algorithm ran 65\% slower at 0.033715 seconds. The glasses classifier ran in 0.004104 seconds. These timings are not absolute because it depends on the image and how the cascade can eliminate sub-windows early (reducing work for later stages). In a simple extrapolation of our timing results, we took the glasses classifier and assumed that all later classifiers in a 200-classifier Viola-Jones parallel implentation would complete in that much time. The result was that it would take 824.718 ms to complete. This result is pessimistic because the cascade of classifiers would cause fewer and fewer sub-windows to be evaluated. All of our timing and accuracy results are found in Tables 1 and 2.
 
 \begin{center}
 	\begin{table}[h!]
@@ -101,6 +101,7 @@ We ran the cascaded algorithm with three different datasets: faces, non-faces, a
 				Parallel Face Detection 		& 20.334 				&				\\ \hline
 				Glasses Detection 				& 4.104 					&				\\ \hline
 				Brute Force Face Detection 	& 33.715 				&				\\ \hline
+				Extrapolated 200 Feature Cascade in Parallel  & 824.718    &
 			\end{tabular}
 		}
 	\end{table}
