--- a/report/EEC277_FinalProject.tex
+++ b/report/EEC277_FinalProject.tex
@@ -20,7 +20,7 @@
 \medskip
 
 \begin{abstract}
-In this paper, we implemented the beginnings of the Viola-Jones object detection method as it applies to faces. We also added a single feature classifier to detect the presence of glasses. To implement this on the GPU, we first find the integral image which is done serially because it is faster. Then, we cascade our identifiers and apply them using the integral image to minimize memory accesses. Finally, if any sub-windows pass all classifiers, it is concluded that the image contains a face. This simple implementation provides 97.3\% accuracy at detecting faces, 96\% accuracy at detecting glasses, a false positive rate of 76\% and runs at a rate of 46 images scanned per second. We also evaluated a non-cascaded Viola-Jones implementation and found it to be slower. At the end, we discuss how the Viola-Jones algorithm can be manipulated to scale more efficiently to the GPU.
+In this paper, we implemented the beginnings of the Viola-Jones object detection method as it applies to faces. We also added a single feature classifier to detect the presence of glasses. To implement this on the GPU, we first find the integral image which is done serially because it is faster. Then, we cascade our identifiers and apply them using the integral image to minimize memory accesses. Finally, if any sub-windows pass all classifiers, it is concluded that the image contains a face. This simple implementation provides 97.3\% accuracy at detecting faces, 96\% accuracy at detecting glasses, a false positive rate of 76\% for faces and 21.1\% for faces and runs at a rate of 46 images scanned per second. We also evaluated a non-cascaded Viola-Jones implementation and found it to be slower. At the end, we discuss how the Viola-Jones algorithm can be manipulated to scale more efficiently to the GPU.
  
 \end{abstract}
 
@@ -42,7 +42,7 @@ The parallel implementation first performs a scan operation on the columns to cr
 
 % Cascade of Classifiers -----------------------------------------------------------------
 \subsection{Cascade of Classifiers}
-The classifiers are simple rectangular identifiers to determine different features of the face. To compute whether the classifier accepts that the given sub-window has a face, the algorithm subtracts the "black" area from the "white" area of the classifier. Figure 1 shows the classifiers we used for face detection. In the Viola-Jones paper, they use two hundred of these kinds of classifiers but we use a small subset of four classifiers because we are interested in how this algorithm applies to the GPU instead of the actual results. Four was sufficient to see the difficulties with implementing this algorithm on the GPU. In training, we found that one of our classifiers continually gave negative values so we ended up using three classifiers.
+The classifiers are simple rectangular identifiers to determine different features of the face. To compute whether the classifier accepts that the given sub-window has a face, the algorithm subtracts the "black" area from the "white" area of the classifier. Figure 1 shows the classifiers we used for face detection. In the Viola-Jones paper, they use two hundred of these kinds of classifiers but we use a small subset of four classifiers because we are interested in how this algorithm applies to the GPU instead of the actual results. Four was sufficient to see the difficulties with implementing this algorithm on the GPU.
 
 The other portion of Viola-Jones face detection was the use of a classifier \emph{cascade}. This means that the output of one classifier (which contains the list of sub-windows that may have a face) is the input for the next classifier. So if any classifier rejects a sub-window, the algorithm rejects the sub-window. If all of the classifiers accept a sub-window, then the algorithm says that there is a face at that sub-window. The alternative to the cascade approach is to apply all of the classifiers to every sub-window and define some number of acceptances that each sub-window needs to determine that there is a face there. We implemented both of these approaches to analyze which would be more efficient on the GPU.
 \begin{figure}[h!]
